# black-hole

./: .gitignore  CMakeLists.txt  README.md
include/: blackhole.h  blackholerenderer.h  camera.h  model.h  noises.h  particlesystem.h  postprocessor.h  shader.h  stars.h
shaders/: blur.frag  bright.frag  composite.frag  cupola.frag  cupola.vert  disk.frag  disk.vert  distort.frag  distortion.vert  distortion_active.frag  distortion_mask.frag  final.frag  horizon.frag  horizon.vert  noises.frag  noises.vert  particle.frag  particle.vert  scene.frag  scene.vert  stars.frag  stars.vert
src/: blackhole.cpp  blackholerenderer.cpp  camera.cpp  main.cpp  model.cpp  noises.cpp  particlesystem.cpp  postprocessor.cpp  shader.cpp  stars.cpp
tests/: test_main.cpp
